# remote-runner

./: .gitignore  CMakeLists.txt  README.md  remote-runnerd.app.list  remote-runnerd.conf
remote-runnerd/: AbstractBootstrap.cpp  AbstractBootstrap.hpp  Build.cpp  Build.hpp  Configuration.cpp  Configuration.hpp  Runner.cpp
remote-runnerd.xcodeproj/: project.pbxproj
remote-runnerd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
remote-runnerd/Bootstrap/: DaemonBootstrap.cpp  DaemonBootstrap.hpp
remote-runnerd/Core/: AbstractEvent.cpp  AbstractEvent.hpp  AbstractException.cpp  AbstractException.hpp  AbstractInputStream.cpp  AbstractInputStream.hpp  AbstractLog.cpp  AbstractLog.hpp  AbstractStream.cpp  AbstractStream.hpp  ExceptionProvoker.hpp  Launcher.cpp  Launcher.hpp  LogLevel.hpp  LogRegister.hpp  StreamException.cpp  StreamException.hpp
remote-runnerd/Core/Net/: AbstractBuffer.cpp  AbstractBuffer.hpp  AbstractClient.cpp  AbstractClient.hpp  AbstractEvent.cpp  AbstractEvent.hpp  AbstractOperation.cpp  AbstractOperation.hpp  AbstractPayload.cpp  AbstractPayload.hpp  AbstractPayloadAdapter.cpp  AbstractPayloadAdapter.hpp  AbstractProxy.cpp  AbstractProxy.hpp  AbstractRequest.cpp  AbstractRequest.hpp  AbstractResponse.cpp  AbstractResponse.hpp  AbstractServer.cpp  AbstractServer.hpp  AbstractSocket.cpp  AbstractSocket.hpp  AbstractSocketAddress.cpp  AbstractSocketAddress.hpp  Connection.cpp  Connection.hpp  Exception.hpp  Log.hpp  Transmission.cpp  Transmission.hpp
remote-runnerd/Core/Net/Buffer/: CensoredBuffer.cpp  CensoredBuffer.hpp  FlexibleBuffer.cpp  FlexibleBuffer.hpp  LimitedBuffer.cpp  LimitedBuffer.hpp
remote-runnerd/Core/Net/Proxy/: TelnetProxy.cpp  TelnetProxy.hpp
remote-runnerd/Core/Net/Request/: LaunchRequest.cpp  LaunchRequest.hpp
remote-runnerd/Core/Net/Request/PayloadAdapter/: LaunchRequestCommandAdapter.cpp  LaunchRequestCommandAdapter.hpp
remote-runnerd/Core/Net/Response/: TelnetApplicationTimeoutResponse.cpp  TelnetApplicationTimeoutResponse.hpp  TelnetConnectionTimeoutResponse.cpp  TelnetConnectionTimeoutResponse.hpp  TelnetLaunchResponse.cpp  TelnetLaunchResponse.hpp
remote-runnerd/Core/Net/Server/: BSDServer.cpp  BSDServer.hpp  LinuxServer.cpp  LinuxServer.hpp  Server.hpp  TelnetServer.cpp  TelnetServer.hpp
remote-runnerd/Core/Net/Socket/: ClientSocket.cpp  ClientSocket.hpp  InetSocketAddress.cpp  InetSocketAddress.hpp  ServerSocket.cpp  ServerSocket.hpp  SocketEvent.cpp  SocketEvent.hpp  UnixSocketAddress.cpp  UnixSocketAddress.hpp
remote-runnerd/Core/Net/Socket/Event/: SocketDown.cpp  SocketDown.hpp  SocketError.cpp  SocketError.hpp  SocketRead.cpp  SocketRead.hpp  SocketUp.cpp  SocketUp.hpp  SocketWrite.cpp  SocketWrite.hpp
remote-runnerd/Core/System/: AbstractOption.cpp  AbstractOption.hpp  AbstractPreference.cpp  AbstractPreference.hpp  AbstractVersion.hpp  Log.hpp
remote-runnerd/Core/System/Option/: DataSourceOption.cpp  DataSourceOption.hpp  FilePathOption.cpp  FilePathOption.hpp  LicenseOption.cpp  LicenseOption.hpp  LogLevelOption.cpp  LogLevelOption.hpp  ResourceLimitOption.cpp  ResourceLimitOption.hpp  SocketAddressOption.cpp  SocketAddressOption.hpp  StringOption.cpp  StringOption.hpp  SwitchOption.cpp  SwitchOption.hpp  TimeoutOption.cpp  TimeoutOption.hpp  URIOption.cpp  URIOption.hpp
remote-runnerd/Core/System/Preference/: Preference.cpp  Preference.hpp
remote-runnerd/Wand/: Any.hpp  AsyncThen.hpp  Atomic.hpp  CMakeLists.txt  Coroutine.hpp  Delegate.hpp  Endian.hpp  Hash.hpp  HashTable.hpp  Listener.hpp  MakeUnique.hpp  Map.hpp  SharedQueue.hpp  SingletonPool.hpp  String.hpp  Type.hpp  URI.hpp  WorkerThread.cpp  WorkerThread.hpp
